plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'io.freefair.lombok' version '9.2.0'

}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

repositories {
    mavenCentral()
}

dependencies{
    implementation 'org.xerial:sqlite-jdbc:3.51.1.0'
    implementation 'org.postgresql:postgresql:42.7.8'
    implementation 'com.h2database:h2:2.2.224'
    implementation 'org.yaml:snakeyaml:2.5'
    implementation 'ch.qos.logback:logback-classic:1.5.29'

    // Testing dependencies
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.1'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'com.h2database:h2:2.2.224'
}

test {
    useJUnitPlatform()
}

application {
    mainClass.set('by.gsu.olaksen.MainApp')
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics','--enable-native-access=ALL-UNNAMED']
}

javafx {
    version = '26.0.1'
    modules = ['javafx.controls','javafx.fxml']
}